# wasmer-clap-portfolio

./: .gitignore  README.md  index.html  index.ts  netlify.toml  package.json  pnpm-lock.yaml  vite.config.ts
project-cli/: Cargo.toml  projects.yaml
project-cli/scripts/: check.sh
project-cli/src/: config.rs  main.rs  project.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/public/: _redirects  medium-feed.html  portfolio.wasm
web/src/: app.css  app.tsx
web/src/wasm/: mount-cli.ts
