[package]
name = "project-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "portfolio"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
wasix = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.8"
anyhow = "1.0"
colored = "3.0.0"